styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


.svg-bg_background__2ILQI {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 40rem;
    left: 0;
    display: block;
    z-index: -1;
    overflow: hidden;
}
.svg-bg_background__2ILQ {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 60rem;
    left: 0;
    display: block;
    z-index: -1;
    overflow: hidden;
}
.services_viewMore__lfD7u a {
    display: inline-block;
    background: #4945af;
    padding: 10px 20px;
    color: #fff;
    text-decoration: none;
    border-radius: 5px;
    font-weight: 700;
    box-shadow: 0 2px 0 #413e9d, 2px 4px 6px #4642a8;
    -webkit-transition: box-shadow .2s;
    transition: box-shadow .2s;
}
.services_viewMoreIcon__zPZ8L {
    display: inline-block;
    -webkit-transform: translateX(0);
    transform: translateX(0);
    -webkit-transition: -webkit-transform .2s;
    transition: -webkit-transform .2s;
    transition: transform .2s;
    transition: transform .2s,-webkit-transform .2s;
}

